# Stroptix

./: .gitignore  README.md  pyproject.toml
Assets/: Infiniti Specification (7).xlsx
data/: config.yaml  plate_library.xlsx  sample_input.xlsx
excel_to_csv_logic/: __init__.py
excel_to_csv_logic/output/: Infiniti Specification (7)_filtered.csv
results/: DESCTRL.IN  output.xlsx  output_bt_on.xlsx  output_cad.xlsx  output_compact.xlsx  output_final_pack.xlsx  output_from_spec.xlsx  output_real.xlsx  output_real_relaxed.xlsx  spec_input.xlsx
scripts/: convert_excel_to_csv.py  diagnose_generation.py  inspect_output.py  spec_csv_to_input.py
str_optix_starter_pack/: README.txt  code_limits.json  config.yaml  config_relaxed.yaml  input_template.xlsx  output_template.xlsx  plate_library.xlsx
stroptix/: __init__.py  cli.py  config.py  generator.py  gui.py  io_excel.py  library.py  mapping.py  models.py  parsing.py  rules.py
stroptix_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_end_to_end.py  test_generator.py  test_rules.py
